merged [9531] from 6.1
svn changeset:9532/svn branch:6.2